============================================================================
2007-02-12  Balint Cristian  <cbalint@redhat.com>

        * Prepare for 3.1.6 release.
        * add ogdi.pc.in and ogdi-config scripts

2007-02-12  Balint Cristian  <cbalint@redhat.com>
        
        Hide plugins from system libs path: 
  
        * move plugins to $LIB_INST/ogdi subfolder (this is std. now).
        
        * add dlopen patch in c-api for run-time to be able find those 
        plugins for that case that we hided plugins from system wide.
        
        * small typo in ChangeLog.

         We shouldn't expose plugin libs to system wide lib search path,
        this would break FHS, its better to keep them hidden, and only
        ogdi binary handle those.

        * use -soname and mark our exposed library, so exclude plugins.
        
        * libogdi31.so is now libogdi.so.3.1 with libogdi.3 soname.
        but should be findable now with -logdi.

        Release versioning:
          
        - MAJOR releases represents major ABI changes in the exposed shared lib.
        This should not be so offen, only once with major code change wich due
        to a change in how ogdi is called external by other applications.
        - MINOR releases represents revisions or bugfixes over ogdi.

2007-02-12  Balint Cristian  <cbalint@redhat.com>

        * fix some gcc warnings, uninited variables, and unused variables.

=============================================================================


2005-02-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare for 3.1.5 release.

2004-10-26  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/utils.c: the path parsing regex was being freed,
	but then not recompiled if needed again later.  Was breaking some 
	efforts to open a second VRF datasource after the first was closed.

	* README: slight improvements in build explanation.

	* ogdi/contrib/ogdi_info/ogdi_info.c: minor improvements.
