@@ -1,3 +1,9 @@
+2007-02-24  Balint Cristian  <cbalint@redhat.com>
+
+        * Clear olso tilestruct while freeing memory in dyn_freelayerpriv().
+        glibc mtrace() reports zero malloc problems now.
+        Thanks to djdejohn for the report !
+
 ============================================================================
 2007-02-12  Balint Cristian  <cbalint@redhat.com>
 
